Started the fixed box that gets clicked away, It's fixed at the bottom of the screen, has text in it, has a border at the top, has a background that is white and a z-index of 10 to put it on top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ body {
     color: var(--mainColor);
     margin: 0px;
     font-family: Helvetica, Arial, sans-serif;
-    
 }
 
 img {
@@ -147,6 +146,17 @@ header {
     flex-direction: row;
 }
 
+/* Click away box fixed at the bottom of the screen */
+
+.clickAwayBox {
+    position: fixed;
+    bottom: 0px;
+    background-color: white;
+    width: 100%;
+    height: 50px;
+    z-index: 10;
+    border-top: var(--mainColor) 1px solid;
+}
 
 /* End of Fixed stuff on screen */
 
